src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_meeting_notes_plain.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "Weekly sync 24/09\nAttendees: Alice, Bob, Carol"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Agenda
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Budget
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Hiring
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "Action items\nAlice: send the deck\nBob: book interviews"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "Weekly sync 24/09\nAttendees: Alice, Bob, Carol"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: Agenda
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: Budget
    depth: 0
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: Hiring
    depth: 0
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: "Action items\nAlice: send the deck\nBob: book interviews"
    depth: 0
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "Weekly sync 24/09\nAttendees: Alice, Bob, Carol"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Agenda
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Budget
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Hiring
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "Action items\nAlice: send the deck\nBob: book interviews"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
