src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_nbsp_indent.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: Clothes
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Socks
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Rain jacket
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Documents
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Passport
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Budget: 300 €"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: Clothes
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: Socks
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: Rain jacket
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: Documents
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: Passport
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "Budget: 300 €"
    depth: 0
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: Clothes
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Socks
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Rain jacket
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Documents
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Passport
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Budget: 300 €"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
