src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_notion_export.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "# Q3 Planning"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Status: In progress\nOwner: Alice Smith\nTags: planning, q3"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Goals"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Ship the importer
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: Parse bullets
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: Parse tasks
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: Write the doc
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Kick-off meeting
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - DONE
    - block_anchor: ~
      content: "<aside>\n💡 Remember to invite design."
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "</aside>"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "See [Retro notes](Q3%20Planning%2012ab34cd56ef7890/Retro%20notes%2098fe76dc54ba3210.md)"
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "# Q3 Planning"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "Status: In progress\nOwner: Alice Smith\nTags: planning, q3"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## Goals"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: Ship the importer
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: Parse bullets
    depth: 3
    is_code: false
    properties: []
  - block_anchor: ~
    content: Parse tasks
    depth: 3
    is_code: false
    properties: []
  - block_anchor: ~
    content: Write the doc
    depth: 2
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Kick-off meeting
    depth: 2
    is_code: false
    properties:
      - - todo_state
        - DONE
  - block_anchor: ~
    content: "<aside>\n💡 Remember to invite design."
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: "</aside>"
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: "See [Retro notes](Q3%20Planning%2012ab34cd56ef7890/Retro%20notes%2098fe76dc54ba3210.md)"
    depth: 2
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "# Q3 Planning"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Status: In progress\nOwner: Alice Smith\nTags: planning, q3"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Goals"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Ship the importer
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: Parse bullets
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: Parse tasks
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: Write the doc
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Kick-off meeting
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - DONE
    - block_anchor: ~
      content: "<aside>\n💡 Remember to invite design."
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "</aside>"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "See [Retro notes](Q3%20Planning%2012ab34cd56ef7890/Retro%20notes%2098fe76dc54ba3210.md)"
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
