src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_obsidian_daily.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "# 2026-09-24"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Tasks"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[ ] Call the bank 📅 2026-09-25"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[ ] Draft the RFC ⏫"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[ ] Outline"
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[x] Collect feedback ✅ 2026-09-23"
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Log"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "09:30 Standup"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "14:00 1:1 with [[Alice]]"
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "# 2026-09-24"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## Tasks"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: Call the bank 📅 2026-09-25
    depth: 2
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Draft the RFC ⏫
    depth: 2
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Outline
    depth: 3
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Collect feedback ✅ 2026-09-23
    depth: 3
    is_code: false
    properties:
      - - todo_state
        - DONE
  - block_anchor: ~
    content: "## Log"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "09:30 Standup"
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: "14:00 1:1 with [[Alice]]"
    depth: 2
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "# 2026-09-24"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Tasks"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Call the bank 📅 2026-09-25
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Draft the RFC ⏫
      depth: 2
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Outline
      depth: 3
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Collect feedback ✅ 2026-09-23
      depth: 3
      is_code: false
      properties:
        - - todo_state
          - DONE
    - block_anchor: ~
      content: "## Log"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "09:30 Standup"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "14:00 1:1 with [[Alice]]"
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
