src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_ordered_steps.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: Preheat the oven to 200 °C.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Mix the dry ingredients.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Flour
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Sugar
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Bake for 25 minutes.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: Preheat the oven to 200 °C.
    depth: 0
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: Mix the dry ingredients.
    depth: 0
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: Flour
    depth: 1
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: Sugar
    depth: 1
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: Bake for 25 minutes.
    depth: 0
    is_code: false
    properties:
      - - listStyle
        - ordered
source:
  blocks:
    - block_anchor: ~
      content: Preheat the oven to 200 °C.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Mix the dry ingredients.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Flour
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Sugar
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: Bake for 25 minutes.
      depth: 0
      is_code: false
      properties:
        - - listStyle
          - ordered
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
