src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_star_checklist.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: Plan the trip
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Book flights
      depth: 1
      is_code: false
      properties:
        - - todo_state
          - DONE
    - block_anchor: ~
      content: Book hotel
      depth: 1
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Pack
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: Plan the trip
    depth: 0
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Book flights
    depth: 1
    is_code: false
    properties:
      - - todo_state
        - DONE
  - block_anchor: ~
    content: Book hotel
    depth: 1
    is_code: false
    properties:
      - - todo_state
        - TODO
  - block_anchor: ~
    content: Pack
    depth: 0
    is_code: false
    properties:
      - - todo_state
        - TODO
source:
  blocks:
    - block_anchor: ~
      content: Plan the trip
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Book flights
      depth: 1
      is_code: false
      properties:
        - - todo_state
          - DONE
    - block_anchor: ~
      content: Book hotel
      depth: 1
      is_code: false
      properties:
        - - todo_state
          - TODO
    - block_anchor: ~
      content: Pack
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
