src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__import_progress_progress.snap
---
source: agaric-engine/src/import.rs
expression: update
---
kind: progress
blocks_done: 7
blocks_total: 12
